@@ -1,9 +1,14 @@
 version 1.3.0
 - update Windows version to gtk 2.4.7
 - add facility for extra information file for a database
-  (sources, expension of abbreviations, etc) TODO
+  (sources, expension of abbreviations, etc) TODO!!
 - fix for SUR systems with differing numbers of regressors
   across equations (thanks to Jack Lucchetti)
+- slight improvement to main window treeview focusing in
+  gtk2 version
+- add stack() function to genr command: creates a stacked
+  series from a comma-separated list of series, or a
+  range of series as in stack(x1..xn)
 
 7/23/2004 version 1.2.9
 - fixes for LaTeX printing of autoregressive models
